# it_math

./: CMakeLists.txt  README.md  main.c
it_math_1/: CMakeLists.txt  it_math_1.c  it_math_1.h  main.c  readme.md  report.md
it_math_1/py_tools/: comparer.py  performance_test.py  sequential_poisson.py
it_math_1/tasks/: CMakeLists.txt  tasks.c  tasks.h
it_math_1/tasks/task_1/: task_1.c
it_math_1/tasks/task_2/: task_2.c
it_math_2/: Blyadina.mw
it_math_3/: SKUF-description.md  experiment.md  readme.md
it_math_3/img_src/Hazbik/: Hazbik_bpmSVD_4.skuf  Hazbik_npSVD_4.skuf  Hazbik_pwmSVD_4.skuf
it_math_3/img_src/simp_fig/: simp_fig_bpmSVD_4.skuf  simp_fig_npSVD_4.skuf  simp_fig_pwmSVD_4.skuf
it_math_3/src/: compressor.py
it_math_3/src/SKUFlib/: Packing.py  PowerMethodSVD.py  SKUF.py  SVD.py  Transformer.py
it_math_3/src/lib/: SKUF.py  SVD.py
it_math_4/: CMakeLists.txt  readme.md
it_math_4/src/: main.cpp
py_tools/: comparer.py
